--- a/assignment.html
+++ b/assignment.html
@@ -6,6 +6,12 @@
     </head>
 
 <body>
+    <nav>
+        <a href="assignment.html">Home</a>
+        <a href="dog.html">Dog Picture</a>
+        <a href="dog_video.html">Dog Video</a>
+    </nav>
+    
     <main>
         <h1>Bunny</h1>
         <p><em>This is a bunny.</em></p>
