--- a/dog.html
+++ b/dog.html
@@ -4,7 +4,12 @@
     <title>Explicit vs Implicit Paths</title>
 </head>
     <body>
-        <img src="imgs/dog.jpg">
-        <img src="https://i.pinimg.com/originals/29/f6/f5/29f6f5b623bfb436c6a49f292b5b0b63.png">
+        <nav>
+            <a href="assignment.html">Home</a>
+            <a href="dog.html">Dog Picture</a>
+            <a href="dog_video.html">Dog Video</a>
+        </nav>
+            <img src="imgs/dog.jpg">
+            <img src="https://i.pinimg.com/originals/29/f6/f5/29f6f5b623bfb436c6a49f292b5b0b63.png">
     </body>
 </html>
